cluster/freshrss/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss-deployment
  namespace: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: BASE_URL
              value: https://freshrss.nathanv.app
            - name: SERVER_DNS
              value: freshrss.nathanv.app
            - name: CRON_MIN
              value: '5,35'
            - name: DB_HOST
              value: freshrss-postgresql-service.freshrss.svc.cluster.local
            - name: OIDC_ENABLED
              value: '1'
            - name: OIDC_PROVIDER_METADATA_URL
              value: https://authentik.nathanv.app/application/o/fresh-rss/.well-known/openid-configuration
            - name: OIDC_X_FORWARDED_HEADERS
              value: X-Forwarded-Port X-Forwarded-Proto X-Forwarded-Host
            - name: OIDC_SCOPES
              value: openid email profile
          image: cr.nathanv.app/docker.io/freshrss/freshrss:1.30.0
          name: freshrss
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: freshrss-data-vol
            - mountPath: /var/www/FreshRSS/extensions
              name: freshrss-extensions-vol
      volumes:
        - name: freshrss-data-vol
          persistentVolumeClaim:
            claimName: freshrss-pvc-data
        - name: freshrss-extensions-vol
          persistentVolumeClaim:
            claimName: freshrss-pvc-extensions
