cluster/freshrss/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-postgresql-service
  namespace: freshrss
spec:
  type: ClusterIP
  selector:
    app: freshrss-postgresql
  ports:
    - port: 5432
      protocol: TCP
