cluster/freshrss/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-service
  namespace: freshrss
spec:
  type: ClusterIP
  selector:
    app: freshrss
  ports:
    - port: 8000
      protocol: TCP
