cluster/freshrss/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss-route
  namespace: freshrss
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`freshrss.nathanv.app`)
      kind: Rule
      services:
        - name: freshrss-service
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
